# QAI

./: .env.example  .env.supabase  .env.supabase.local  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTH_IMPLEMENTATION_PLAN.md  COMO_USAR_API_TOOLS.md  MEJORAS_CONFIGURACION.md  Makefile  PR_CLEANUP_PLAN.md  PR_FINAL_SUMMARY.md  PR_READY_FINAL.md  README.md  SOLID_IMPLEMENTATION_SUMMARY.md  agent_config.yaml  chat_directo.py  config.py  ejemplo_api_tools.py  get_real_oauth_token.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_qa_agent.py  run_tests.py  run_websocket_server.py  speed_test_client.py  test_scenarios_demo.txt  websocket_diagnostic.py
.github/: README.md  SETUP_COMPLETE.md  branch-protection.md  copilot-instructions.md  instructions.md  pull_request_template.md  setup-repo.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  ci.yml
agent/: __init__.py
config/: __init__.py  legacy.py  migrate.py  model_config.py  model_config_legacy.py  models.py  settings.py  supabase.py
config/models/: __init__.py  core.py  interface.py  logging.py  websocket.py
data/: qa_intelligence.db-shm  qa_intelligence.db-wal  qa_intelligence.postfix.backup
data/exports/: confluence_reports.csv  final_performance_results.csv  final_test_reports.csv  final_test_runs.csv  latest_performance_results.csv  latest_test_runs.csv  performance_config.csv  performance_errors.csv  performance_results.csv  test_reports.csv  test_reports_complete.csv  test_runs.csv  test_runs_complete.csv
data/index_repair_20250912_073504/: qa_intelligence.db.bak
data/migration_backups/: user_permissions_legacy_20250912_054857.sql  user_permissions_legacy_20250912_054907.sql  user_permissions_legacy_20250912_055238.sql  user_roles_legacy_20250912_055551.sql
database/: __init__.py  base.py  connection.py
database/migrations/: add_execution_variables_column.py  add_postman_variables_field.py  add_solid_fields.py  clean_endpoints_structure.py  create_test_scenarios.py  drop_api_requests_table.py  drop_api_test_tables.py  fix_role_values.py  fix_user_permissions_fk.py  fix_user_roles_fk.py  rename_to_execution_variables.py  rename_to_execution_variables_simple.py
database/models/: __init__.py  api_collections.py  app_environment_country_mappings.py  application_endpoints.py  apps.py  apps_master.py  countries.py  environments.py  mappings.py  oauth.py  performance_endpoint_results.py  performance_execution_errors.py  performance_slas.py  performance_test_configs.py  performance_test_executions.py  permissions_rbac.py  rag.py  sla_violations.py  test_scenarios.py  users.py
database/repositories/: __init__.py  api_collections_repository.py  app_environment_country_mappings_repository.py  application_endpoints_repository.py  apps_repository.py  base.py  countries_repository.py  environments_repository.py  exceptions.py  interfaces.py  mappings_repository.py  oauth_repository.py  performance_endpoint_results_repository.py  performance_execution_errors_repository.py  performance_slas_repository.py  performance_test_configs.py  performance_test_executions.py  rag_manager.py  rbac_simple.py  sla_violations_repository.py  unit_of_work.py  users.py
database/utils/: __init__.py
docs/: ACTION_PLAN_GIT_FIX.md  AGNO_TOOLS_ANALYSIS_AND_ROADMAP.md  BRANCHING_STRATEGY.md  BRANCH_PROTECTION_SETUP.md  DATABASE_ANALYSIS_AND_IMPROVEMENTS.md  DATABASE_IMPLEMENTATION_PLAN.md  DATABASE_IMPROVEMENTS_IMPLEMENTED.md  DATABASE_ORM_RECOMMENDATION.md  DATABASE_QUERY_TOOL.md  DATABASE_TECHNICAL_ANALYSIS.json  DATABASE_UPGRADE_SUMMARY.md  DEVELOPMENT.md  ENVELOPE_SYSTEM.md  ENV_VARIABLES.md  EXCEPTION_HANDLING_IMPROVEMENTS.md  EXECUTION_VARIABLES_SYSTEM.md  FEATURE_DATABASE_QUERY_TOOL.md  GIT_WORKFLOW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  POSTMAN_IMPORT.md  PYPROJECT_IMPLEMENTATION.md  README.md  SUPABASE_MIGRATION.md  TEST_SCENARIOS_SYSTEM.md  VSCODE_SETUP_COMPLETE.md  VSCODE_WORKFLOW.md  VSCODE_WORKFLOW_GUIDE.md  WORKFLOW_TEST.md
examples/: react_frontend_integration.js
scripts/: README.md  admin-merge.sh  analyze_database.py  cleanup_perf_runs.py  debug_tool_validation.py  gh-merge.sh  implement_sqlmodel.py  import_postman_deprecated.py  migrate_endpoint_urls.py  migrate_to_supabase.py  process_cleanup_manager.py  qa_intelligence_team.py  quick-merge.sh  recreate_user_effective_permissions.sql  run_qa_agent.py  start.sh  start_all_services.py  start_services.py  test_base_url_fix.py  test_clean_endpoints.py  test_clean_organization.py  test_clean_organization_simple.py  test_complete_workflow.py  test_final_organization.py  upgrade_database.py
src/: logging_config.py
src/agent/: README.md  __init__.py  agent_builder.py  agent_factory.py  chat_interface.py  error_recovery.py  model_manager.py  qa_agent.py  reasoning_manager.py  response_manager.py  storage_manager.py  tools_manager.py
src/api/: metrics_api.py  metrics_api_simple.py
src/application/: __init__.py
src/auth/: README.md  __init__.py  get_real_oauth_token_integrated.py  oauth_manager.py  oauth_token_tool.py  qa_oauth_tool.py
src/observability/: __init__.py  (+3 more)
tests/: README.md  conftest.py  test_chat_agent_functionality.py  test_config.py  test_config_simple.py  test_config_validation.py  test_database_integrity.py  test_database_solid_specific.py  test_envelope_simple.py  test_envelope_system.py  test_envelope_system_fixed.py  test_envelope_validation.py  test_final_completo.py  test_final_envelope.py  test_final_functional.py  test_functional_validation.py  test_instructions_normalization.py  test_integration_complete.py  test_performance_e2e_gatling_monitoring.py  test_performance_e2e_monitoring.py  test_performance_e2e_shell_runner_simulation.py  test_performance_persistence.py  test_postman_importer_deprecated.py  test_qa_agent.py  test_run_qa_agent_entry.py  test_simple_functionality.py  test_solid_repositories.py  test_tools_validation.py  test_user_model.py
(+123 files in other folders)
